# ros-box

./: .gitignore  README.md
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: IoTSensor.msg
src/custom_msgs/src/cpp/: cm_screen.cpp  cm_sensor.cpp
src/custom_msgs/src/py/: cm_screen.py  cm_sensor.py
src/laser_scanner/: CMakeLists.txt  package.xml
src/laser_scanner/src/cpp/: laser_scanner.cpp  laser_scanner_utils.cpp  laser_scanner_utils.h
src/laser_scanner/src/py/: laser_scanner.py
src/maze_robot/: CMakeLists.txt  package.xml
src/maze_robot/src/py/: maze_robot.py
src/motion/: CMakeLists.txt  package.xml
src/motion/src/launch/: motion.launch
src/motion/src/py/: mo_motion.py
src/opencv/: ball_detection.py  color_filtering.py  edge_detection.py  image_encoding.py  image_structure.py  open_copy.py  read_video.py  shapes.py  thresholding.py
src/publisher_subscriber/: CMakeLists.txt  package.xml
src/publisher_subscriber/src/cpp/: ps_listener.cpp  ps_talker.cpp
src/publisher_subscriber/src/py/: ps_listener.py  ps_talker.py
src/rectangle_area_service/: CMakeLists.txt  package.xml
src/rectangle_area_service/src/cpp/: ras_client.cpp  ras_server.cpp
src/rectangle_area_service/src/py/: ras_client.py  ras_server.py
src/rectangle_area_service/srv/: RectangleAreaService.srv
src/ros_opencv/: CMakeLists.txt  package.xml
src/ros_opencv/src/launch/: ros_opencv.launch
src/ros_opencv/src/py/: rcv_ball_tracking_cam.py  rcv_ball_tracking_opencv.py  rcv_ball_tracking_video_pub.py  rcv_ball_tracking_video_sub.py  rcv_camera.py
src/services/: CMakeLists.txt  package.xml
src/services/src/cpp/: se_client.cpp  se_server.cpp
src/services/src/py/: se_client.py  se_server.py
src/turtle_agent/: CMakeLists.txt  package.xml
src/turtle_agent/src/cpp/: turtle_agent.cpp
src/turtle_agent/src/py/: turtle_agent.py
