<?xml version="1.0"?>
<package format="2">
  <name>publisher_subscriber</name>
  <version>0.0.0</version>
  <description>The publisher_subscriber package</description>

  <maintainer email="nishantholla19@gmail.com">Nishant Holla</maintainer>
  <license>MIT</license>
  <url type="website">http://wiki.ros.org/publisher_subscriber</url>
  <author email="nishantholla19@gmail.com">Nishant Holla</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export> </export>
</package>
